# jet_engine_cycle_analysis_tool

./: .dockerignore  .gitignore  CLAUDE.md  README.md  build_solver.sh  pyproject.toml  run_docker.sh  run_tests.sh
.github/workflows/: ci.yml
docker/: Dockerfile
pipeline/: __init__.py  acronyms.py  atmosphere.py  changelog.py  constants.py  io_utils.py  lhs_study.py  physics.py  plotting.py  solver_interface.py  surrogate.py  trade_study.py
scripts/: build_docs.sh  run_lhs_study.py  run_surrogate_gif.py  run_trade_study.py  setup_env.sh  train_surrogate.py
solver/: CMakeLists.txt  conanfile.txt  main.cpp
solver/config/: config.json
solver/src/: atmosphere.cpp  atmosphere.h  constants.h  engine_cycle.cpp  engine_cycle.h  error_utils.h  thermo_utils.h
solver/tests/: test_solver.cpp
tests/: test_atmosphere.py  test_io_utils.py  test_lhs_study.py  test_regression.py  test_solver_interface.py  test_surrogate.py  test_trade_study.py
