[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jet-engine-cycle-analysis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.2.6",
    "matplotlib==3.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pdoc",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]
